--- a/Buzzle_-main/homealuno.html
+++ b/Buzzle_-main/homealuno.html
@@ -46,7 +46,9 @@
                    
                         <h3 class="h3">8ºC</h3>
 
-                        <h3 class="h4">Prazo</h3>
+                        <h4 class="h4">Prazo: 2 dias</h4>
+
+                        <h4 class="h5">Nota: 70</h4>
 
                     </div>
                     <div class="divcarrossel">
